# titanic-mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile.inference  Dockerfile.train  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
data/processed/: train_processed.csv
mlruns/1/models/m-1d947d3d10a943a8b9a2d78af985063d/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-38bcd150dc2f4815af406941abfc76d4/artifacts/: MLmodel
mlruns/1/models/m-3ccf494e43874e92902ab43fa4c3d99c/artifacts/: MLmodel
mlruns/1/models/m-57077c242ca4472893d166a30ce1c630/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/1/models/m-57afb6d3899048c2b41d4e52bb9bb4f8/artifacts/: MLmodel
mlruns/1/models/m-6a0f84f935504ee1a1d8f95a498e3a51/artifacts/: MLmodel
mlruns/1/models/m-8ccd34b27df14cc9b9bf7ef1079e01a2/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-939ba25a3b584708a9832c83b59a9ea0/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/1/models/m-eaff8f5e816f4f21b8f89c66f91661c1/artifacts/: MLmodel
src/: data_preprocessing.py  monitoring.py  predict.py  train.py
tests/: test_api.py  test_api_simple.py  test_data.py  test_train.py
